<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_marginRight="50dp"
        android:layout_height="match_parent" android:layout_marginLeft="50dp"
        tools:context=".Rates">

	<TextView
			android:text="@string/rates" android:textSize="32sp"
			android:layout_width="wrap_content" android:textColor="@android:color/black"
			android:layout_height="wrap_content" android:id="@+id/textView4"
			app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
			app:layout_constraintHorizontal_bias="0.069"/>
	<TextView
			android:text="@string/AED" android:textSize="24sp"
			android:layout_width="wrap_content" android:textColor="@android:color/black"
			android:layout_height="wrap_content" android:id="@+id/textView11"
			app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
			app:layout_constraintHorizontal_bias="0.154"/>
	<TextView
			android:text="@string/GBP" android:textSize="24sp"
			android:layout_width="wrap_content" android:textColor="@android:color/black"
			android:layout_height="wrap_content" android:id="@+id/textView14"
			app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="120dp"
			app:layout_constraintHorizontal_bias="0.153"/>
	<TextView
			android:text="@string/USD" android:textSize="24sp"
			android:layout_width="wrap_content" android:textColor="@android:color/black"
			android:layout_height="wrap_content" android:id="@+id/textView17"
			app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="220dp"
			app:layout_constraintHorizontal_bias="0.15"/>
	<TextView
			android:text="@string/AEDtoGBP" android:textSize="20sp"
			android:layout_width="wrap_content" android:textColor="@android:color/black"
			android:layout_height="wrap_content" android:id="@+id/textView12"
			app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textView11" android:layout_marginTop="8dp"
			app:layout_constraintHorizontal_bias="0.455"/>
	<TextView
			android:text="@string/GBPtoAED" android:textSize="20sp"
			android:layout_width="wrap_content" android:textColor="@android:color/black"
			android:layout_height="wrap_content" android:id="@+id/textView15"
			app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textView14"
			app:layout_constraintHorizontal_bias="0.447" android:layout_marginTop="8dp"/>
	<TextView
			android:text="@string/USDtoAED" android:textSize="20sp"
			android:layout_width="wrap_content" android:textColor="@android:color/black"
			android:layout_height="wrap_content" android:id="@+id/textView18"
			app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textView14"
			app:layout_constraintHorizontal_bias="0.447" android:layout_marginTop="108dp"/>
	<TextView
			android:text="@string/USDtoGBP" android:textSize="20sp"
			android:layout_width="wrap_content" android:textColor="@android:color/black"
			android:layout_height="wrap_content" android:id="@+id/textView19"
			app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textView18"
			app:layout_constraintHorizontal_bias="0.449"/>
	<TextView
			android:text="@string/GBPtoUSD" android:textSize="20sp"
			android:layout_width="wrap_content" android:textColor="@android:color/black"
			android:layout_height="wrap_content" android:id="@+id/textView16"
			app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textView15"
			app:layout_constraintHorizontal_bias="0.447"/>
	<TextView
			android:text="@string/AEDtoUSD" android:textSize="20sp"
			android:layout_width="wrap_content" android:textColor="@android:color/black"
			android:layout_height="wrap_content" android:id="@+id/textView13"
			app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textView12"
			app:layout_constraintHorizontal_bias="0.452"/>
</androidx.constraintlayout.widget.ConstraintLayout>