<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent" android:layout_marginRight="50dp" android:layout_marginLeft="50dp"
		android:layout_marginBottom="10dp"
		android:layout_height="match_parent"
		tools:context=".Instructions">

	<TextView
			android:text="@string/Welcome" android:textColor="@android:color/black" android:textSize="18sp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/instr"
			android:gravity="center" android:textAlignment="center"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
			android:layout_marginTop="16dp" app:layout_constraintHorizontal_bias="0.495"/>
	<TextView
			android:text="@string/Description" android:textColor="@android:color/black"
			android:layout_width="wrap_content"
			android:layout_height="0dp" android:id="@+id/textView5"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/instr"
			android:layout_marginTop="8dp" app:layout_constraintHorizontal_bias="0.0"/>
	<TextView
			android:text="@string/How" android:textColor="@android:color/black"
			android:layout_width="313dp"
			android:layout_height="50dp" android:id="@+id/textView6"
			app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="4dp"
			app:layout_constraintHorizontal_bias="0.0"/>
	<TextView
			android:text="@string/Then" android:textColor="@android:color/black"
			android:layout_width="wrap_content"
			android:layout_height="0dp" android:id="@+id/textView7"
			app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toBottomOf="@+id/textView6"/>
	<TextView
			android:text="@string/Rate" android:textColor="@android:color/black"
			android:layout_width="wrap_content"
			android:layout_height="0dp" android:id="@+id/textView8"
			app:layout_constraintTop_toBottomOf="@+id/textView7"
			android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.545"/>
	<TextView
			android:text="@string/Swap" android:textColor="@android:color/black"
			android:layout_width="wrap_content"
			android:layout_height="0dp" android:id="@+id/textView9"
			android:layout_marginTop="8dp" app:layout_constraintHorizontal_bias="0.529"
			app:layout_constraintTop_toBottomOf="@+id/textView8" app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"/>
	<TextView
			android:text="@string/History" android:textColor="@android:color/black"
			android:layout_width="wrap_content"
			android:layout_height="0dp" android:id="@+id/textView10"
			app:layout_constraintTop_toBottomOf="@+id/textView9" app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>