<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".MainActivity">

	<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
	              android:orientation="horizontal" android:paddingTop="10dp" android:paddingBottom="8dp"
	              android:background="@color/darkMode" tools:ignore="MissingConstraints"
	              android:id="@+id/linearLayout">
	</LinearLayout>

	<EditText
			android:layout_width="411dp" android:textColor="@color/Text"
			android:layout_height="wrap_content"
			android:inputType="numberDecimal"
			android:ems="10" android:textColorHint="@color/Text" android:shadowColor="@color/Text"
			android:id="@+id/ConvertMoney" android:backgroundTint="@color/Text"
			android:autofillHints="Input" android:labelFor="@id/ConvertMoney"
			app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/spinOne" app:layout_constraintVertical_bias="0.069"
			android:hint="@string/amount" tools:ignore="LabelFor" android:singleLine="true"/>
	<Button
			android:text="@string/convert" android:textColor="@android:color/black"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/Converter"
			app:layout_constrainedHeight="false"
			app:layout_constraintTop_toBottomOf="@+id/spinTwo" app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.498" app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintVertical_bias="0.261"/>
	<Button
			android:text="@string/swap" android:textColor="@android:color/black"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/Swap"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toStartOf="@+id/Converter" app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/spinTwo" app:layout_constraintHorizontal_bias="0.479"
			app:layout_constraintVertical_bias="0.258"/>
	<Spinner
			android:layout_width="match_parent" android:backgroundTint="@color/Text"
			android:layout_height="40dp" android:id="@+id/spinOne"
			app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/linearLayout"
			app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.205"/>
	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/currency"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent" android:id="@+id/textView"
			app:layout_constraintHorizontal_bias="0.045" app:layout_constraintVertical_bias="0.839"
			app:layout_constraintBottom_toTopOf="@+id/spinOne" android:layout_marginTop="120dp"/>
	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/into"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintHorizontal_bias="0.049"
			app:layout_constraintVertical_bias="0.977" app:layout_constraintBottom_toTopOf="@+id/spinTwo"
			android:id="@+id/textView3"/>
	<Spinner
			android:layout_width="match_parent" android:backgroundTint="@color/Text"
			android:layout_height="40dp" android:id="@+id/spinTwo"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintVertical_bias="0.112" app:layout_constraintTop_toBottomOf="@+id/ConvertMoney"/>
	<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content" android:id="@+id/Answer" android:textSize="32sp"
			android:text="@string/space" android:key="ihniwti" android:textColor="@color/Text"
			app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/Converter" app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="0.344"
			android:gravity="center"/>
	<Button
			android:text="@string/history" android:textColor="@android:color/black"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/history"
			app:layout_constraintStart_toEndOf="@+id/Converter"
			app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/spinTwo" app:layout_constraintHorizontal_bias="0.513"
			app:layout_constraintVertical_bias="0.258"/>
	<ImageView
			android:layout_width="127dp"
			android:layout_height="99dp" app:srcCompat="@drawable/bartex_logo" android:id="@+id/imageView2"
			app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_bias="0.039" app:layout_constraintHorizontal_bias="0.161"
			android:contentDescription="@string/app_name"/>
	<TextView
			android:text="@string/app_name" android:textSize="40sp"
			android:layout_width="wrap_content" android:textColor="@color/colorPrimary"
			android:layout_height="wrap_content" android:id="@+id/textView2"
			android:layout_marginStart="19dp" app:layout_constraintStart_toEndOf="@+id/imageView2"
			app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintVertical_bias="0.073"/>
	<ImageButton
			android:layout_width="44dp" android:background="@color/backgroundColor"
			android:layout_height="43dp" app:srcCompat="@android:drawable/ic_menu_info_details"
			android:id="@+id/ins" app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@+id/linearLayout"
			app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.956"
			app:layout_constraintVertical_bias="0.036" tools:ignore="ContentDescription"/>
	<Button
			android:text="@string/rates" android:textSize="8sp" android:textColor="@color/Text"
			android:layout_width="81dp" android:background="@color/backgroundColor"
			android:layout_height="18dp" android:id="@+id/rate"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toEndOf="@+id/textView3" app:layout_constraintHorizontal_bias="0.93"
			app:layout_constraintVertical_bias="0.415" tools:ignore="SmallSp"/>

</androidx.constraintlayout.widget.ConstraintLayout>